--- a/A_dbms/templates/dbms/agree/scan/summry.html
+++ b/A_dbms/templates/dbms/agree/scan/summry.html
@@ -1,6 +1,6 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <label>项目情况</label>
+        <label>合同情况</label>
         <label class="navbar-right">
             <a class="btn btn-primary btn-sm"
                target="_blank"
