--- a/A_dbms/templates/dbms/article/modl/edit-article-mod.html
+++ b/A_dbms/templates/dbms/article/modl/edit-article-mod.html
@@ -8,9 +8,9 @@
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h4 class="modal-title" id="editArticleModalLabel">
-                    修改项目
+                    修改项目：{{ article_obj.article_num }}
                     <input style="display: none" name="article_id"
-                           id="articleEditId" value="{{ article_obj.id }}">
+                           value="{{ article_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
