--- a/A_dbms/templates/dbms/article/scan/summry.html
+++ b/A_dbms/templates/dbms/article/scan/summry.html
@@ -31,7 +31,7 @@
             纪要编号：{{ article_obj.summary_num }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            申请金额：{{ article_obj.amount }}
+            金额合计：{{ article_obj.amount }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             续贷金额：{{ article_obj.renewal }}
