--- a/A_dbms/templates/dbms/meeting/extra/js-allot-expert.html
+++ b/A_dbms/templates/dbms/meeting/extra/js-allot-expert.html
@@ -1,22 +1,22 @@
 <script>
     $(function () {
-        bindEditArticle();
-        bindEditArticleModalOk();
+        bindAllotExpert();
+        bindAllotExpertModalOk();
 
     });
 
-    function bindEditArticle() {
-        $('#editArticle').click(function () {
-            console.log("bindEditArticle")
-            $('#editArticleModal').modal('show');
+    function bindAllotExpert() {
+        $('#allotExpert').click(function () {
+            console.log("bindAllotExpert")
+            $('#allotExpertModal').modal('show');
         })
     }
 
-    function bindEditArticleModalOk() {
-        $('#editArticleModalOk').click(function () {
+    function bindAllotExpertModalOk() {
+        $('#allotExpertModalOk').click(function () {
             var postData = {};
 
-            $('#editArticleModal').find('input,select').each(function () {
+            $('#allotExpertModal').find('input,select').each(function () {
                 var v = $(this).val();
                 var n = $(this).attr('name');
                 postData[n] = v;
@@ -24,26 +24,24 @@
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr)
             $.ajax({
-                url: '/dbms/article/edit-ajax/',
+                url: '/dbms/meeting/allot/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 success: function (arg) {
                     var dict = JSON.parse(arg);
                     console.log(dict);
                     if (dict.status) {
+                        $('#allotExpertModal').modal('hide');
                         alert(dict.message);
-                        $('#editArticleModal').modal('hide');
                         window.location.reload();
                     } else {
                         alert(dict.message);
-                        $('#e_renewal').text(dict.forme.renewal);
-                        $('#e_augment').text(dict.forme.augment);
+                        $('#e_expert').text(dict.forme.expert);
                     }
                 }
             })
         })
     }
-
 </script>
 
 
