--- a/A_dbms/templates/dbms/meeting/extra/js-del-meeting-article.html
+++ b/A_dbms/templates/dbms/meeting/extra/js-del-meeting-article.html
@@ -1,22 +1,21 @@
 <script>
     $(function () {
-        bindEditArticle();
-        bindEditArticleModalOk();
-
+        bindDelMeetingArticle();
+        bindDelMeetingArticleModalOk();
     });
 
-    function bindEditArticle() {
-        $('#editArticle').click(function () {
-            console.log("bindEditArticle")
-            $('#editArticleModal').modal('show');
+    function bindDelMeetingArticle() {
+        $('#delMeetingArticle').click(function () {
+            console.log("bindDelMeetingArticle")
+            $('#delMeetingArticleModal').modal('show');
         })
     }
 
-    function bindEditArticleModalOk() {
-        $('#editArticleModalOk').click(function () {
+    function bindDelMeetingArticleModalOk() {
+        $('#delMeetingArticleModalOk').click(function () {
             var postData = {};
 
-            $('#editArticleModal').find('input,select').each(function () {
+            $('#delMeetingArticleModal').find('input,select').each(function () {
                 var v = $(this).val();
                 var n = $(this).attr('name');
                 postData[n] = v;
@@ -24,26 +23,25 @@
             var postDataStr = JSON.stringify(postData);
             console.log(postDataStr)
             $.ajax({
-                url: '/dbms/article/edit-ajax/',
+                url: '/dbms/meeting/article/del/',
                 type: 'POST',
                 data: {'postDataStr': postDataStr},
                 success: function (arg) {
                     var dict = JSON.parse(arg);
-                    console.log(dict);
                     if (dict.status) {
+                        $('#delMeetingArticleModal').modal('hide');
                         alert(dict.message);
-                        $('#editArticleModal').modal('hide');
                         window.location.reload();
                     } else {
+                        $('#delMeetingArticleModal').modal('hide');
                         alert(dict.message);
-                        $('#e_renewal').text(dict.forme.renewal);
-                        $('#e_augment').text(dict.forme.augment);
+                        {#window.location.reload();#}
                     }
                 }
             })
+
         })
     }
-
 </script>
 
 
