--- a/A_dbms/templates/dbms/article/extra/js-del-article.html
+++ b/A_dbms/templates/dbms/article/extra/js-del-article.html
@@ -14,12 +14,20 @@
 
     function bindDelArticleModalOk() {
         $('#delArticleModalOk').click(function () {
-            var article_id = $('#articleDelId').val()
+            var postData = {};
+
+            $('#delArticleModal').find('input,select').each(function () {
+                var v = $(this).val();
+                var n = $(this).attr('name');
+                postData[n] = v;
+            });
+            var postDataStr = JSON.stringify(postData);
+            console.log(postDataStr)
 
             $.ajax({
                 url: '/dbms/article/del/',
                 type: 'POST',
-                data: {'article_id': article_id},
+                data: {'postDataStr': postDataStr},
                 success: function (arg) {
                     var dict = JSON.parse(arg);
                     if (dict.status) {
