--- a/A_dbms/templates/dbms/meeting/article/summry.html
+++ b/A_dbms/templates/dbms/meeting/article/summry.html
@@ -1,22 +1,20 @@
 <div class="panel panel-default">
     <div class="panel-heading">
-        <label>项目情况</label>
+        <label>
+            项目情况
+        </label>
         <label class="navbar-right">
-            <a class="btn btn-primary btn-sm"
-               href="{% url 'dbms:meeting_allot' meeting_id=meeting_id article_id=article_id %}">
+            <a class="btn btn-primary btn-sm " id="allotExpert">
                 分配评委
-            </a>
-            <a class="btn btn-primary btn-sm "
-               href="#">
-                评审意见
-            </a>
+            </a><!--#path('meeting/allot_ajax/'-->
+
             <a class="btn btn-primary btn-sm "
                href="#">
                 单项额度
             </a>
-            <button class="btn btn-danger btn-sm ">
+            <a class="btn btn-danger btn-sm " id="delMeetingArticle">
                 取消上会
-            </button>
+            </a>
         </label>
     </div>
 
@@ -31,7 +29,7 @@
             评审编号：{{ meeting_obj.num }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            申请金额：{{ article_obj.amount }}
+            金额合计：{{ article_obj.amount }}
         </label>
         <label class="col-lg-3 col-md-4 col-sm-6 col-xs-12">
             续贷金额：{{ article_obj.renewal }}
