--- a/A_dbms/templates/dbms/meeting/modl/del-meeting-article-mod.html
+++ b/A_dbms/templates/dbms/meeting/modl/del-meeting-article-mod.html
@@ -1,16 +1,18 @@
-<div class="modal fade bs-example-modal-sm" id="delArticleModal"
-     tabindex="-1" role="dialog" aria-labelledby="delArticleModal">
+<div class="modal fade bs-example-modal-sm" id="delMeetingArticleModal"
+     tabindex="-1" role="dialog" aria-labelledby="delMeetingArticleModal">
     <div class="modal-dialog modal-sm" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title" id="delArticleModalLabel">
-                    删除项目
+                <h4 class="modal-title" id="delMeetingArticleModalLabel">
+                    取消上会
+                    <input style="display: none" name="meeting_id"
+                           value="{{ meeting_obj.id }}">
                     <input style="display: none" name="article_id"
                            value="{{ article_obj.id }}">
                 </h4>
             </div>
             <div class="modal-body">
-                是否确定项目：{{ article_obj.article_num }}!!!!
+                是否确定取消“{{ article_obj.article_num }}”本次上会!!!!
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-default"
@@ -18,7 +20,7 @@
                     取消
                 </button>
                 <button type="button" class="btn btn-primary"
-                        id="delArticleModalOk">
+                        id="delMeetingArticleModalOk">
                     确定
                 </button>
             </div>
