--- a/A_dbms/templates/dbms/meeting/article/detail/content/single.html
+++ b/A_dbms/templates/dbms/meeting/article/detail/content/single.html
@@ -12,6 +12,7 @@
             <th>授信额度（元）</th>
             <th>费率（%）</th>
             <th>放款金额</th>
+            <th>操作</th>
         </tr>
         </thead>
         <tbody>
@@ -21,6 +22,11 @@
                 <td>{{ single.credit_amount }}</td>
                 <td>{{ single.flow_rate }}</td>
                 <td>{{ single.amount }}</td>
+                <td>
+                    <a class="btn btn-primary btn-xs">
+                        删除
+                    </a>
+                </td>
             <tr>
         {% endfor %}
         </tbody>
