--- a/A_dbms/templates/dbms/meeting/article/summry.html
+++ b/A_dbms/templates/dbms/meeting/article/summry.html
@@ -7,11 +7,9 @@
             <a class="btn btn-primary btn-sm " id="allotExpert">
                 分配评委
             </a><!--#path('meeting/allot_ajax/'-->
-
-            <a class="btn btn-primary btn-sm "
-               href="#">
+            <a class="btn btn-primary btn-sm " id="singleQuota">
                 单项额度
-            </a>
+            </a> <!--#path('meeting/single/'-->
             <a class="btn btn-danger btn-sm " id="delMeetingArticle">
                 取消上会
             </a>
