--- a/A_dbms/templates/dbms/meeting/meeting-article.html
+++ b/A_dbms/templates/dbms/meeting/meeting-article.html
@@ -11,6 +11,7 @@
         {% include 'dbms/meeting/modl/allot-expert-mod.html' %}
         {% include 'dbms/meeting/modl/del-meeting-article-mod.html' %}
         {% include 'dbms/meeting/modl/add-comment-mod.html' %}
+        {% include 'dbms/meeting/modl/add-single-mod.html' %}
     </div>
 
 {% endblock %}
@@ -19,4 +20,5 @@
     {% include 'dbms/meeting/extra/js-allot-expert.html' %}
     {% include 'dbms/meeting/extra/js-del-meeting-article.html' %}
     {% include 'dbms/meeting/extra/js-add-comment.html' %}
+    {% include 'dbms/meeting/extra/js-add-single.html' %}
 {% endblock %}
