--- a/A_dbms/templates/dbms/meeting/scan/summry.html
+++ b/A_dbms/templates/dbms/meeting/scan/summry.html
@@ -5,10 +5,9 @@
             <a class="btn btn-success btn-sm " id="meetingNotice">
                 评审会通知
             </a>
-            <!--<a class="btn btn-danger btn-sm"
-               href="{% url 'dbms:meeting_edit' meeting_id=meeting_obj.id %}">
+            <a class="btn btn-danger btn-sm " id="closeMeeting">
                 完成评审会
-            </a>-->
+            </a>
             <a class="btn btn-danger btn-sm " id="editMeeting">
                 修改评审会
             </a>
